# shamela2epub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
java-helper/: pom.xml
java-helper/src/main/java/org/shamela2epub/helper/: DumpIndex.java
shamela2epub/: cli.py  epub_exporter.py  html_exporter.py  loader.py  lucene_helper.py  model.py  paths.py  sqlite_reader.py  text.py
